# CHS

./: .gitignore  ANALYSIS.md  CONFIGURATION_CONTRACT.md  MESSAGE_CONTRACT_PROPOSAL.md  PERFORMANCE_REPORT.md  README.md  benchmark.py  config.yaml  control_structure_models.py  disturbance_models.py  docker-compose.yml  generate_plots.py  pom.xml  pyproject.toml  requirements.txt  run_case.py  run_case1.py  run_case4.py  run_case6.py  run_remaining.sh  run_simulation.py  sample_agent.agent  setup.py  simulation_log.csv  simulation_results.csv  single_tank_pid_simulation.py  single_tank_simulation_log.csv  test_e2e_workflow.py  test_phase4_workflow.py  validation_main.py  verify_all.sh  verify_remaining.sh  基于CHS库的单容水箱PID控制代码.ipynb
water_system_sdk/: README.md  mypy.ini  pyproject.toml  setup.py
water_system_sdk/docs/: GUIDE_OUTLINE.md
water_system_sdk/docs/guide/: 01-Introduction.md  02-Installation-and-Setup.md  03-Core-Concepts-Simulation.md  04-Intelligent-Control-PID.md  05-Advanced-Control-MPC.md  06-Gates.md  07-Pumps.md  08-Valves.md  09-Hydropower.md  10-Channels.md  11-Pipes.md  12-Reservoirs-Advanced.md  13-Ponds-Tanks.md  14-Hydrology.md  15-Model-Zoo.md  16-Data-Preprocessing.md  17-System-Identification.md  18-Kalman-Filter.md  19-Ensemble-Kalman-Filter.md  20-Rule-Based-Dispatch.md  21-Optimization-Dispatch.md  22-Results-Analysis.md  23-Irrigation-System.md  24-Water-Supply-Network.md  25-Urban-Drainage.md  26-Cascade-Hydropower.md  27-Flood-Control.md  28-Hybrid-System.md  29-Performance-Optimization.md  30-Custom-Models.md  31-Custom-Agents.md  32-Integration.md  33-API-Service-Usage.md  index.md
water_system_sdk/docs/guide/source/: api_config.json  ch03_single_reservoir.py  ch05_mpc_control.py  ch08_valve_control.py  ch09_hydropower_control.py  ch13_pond_simulation.py  ch14_hydrology_simulation.py  ch14_timeseries.json  ch15_control_parameters.yml  ch15_system.yml  ch19_enkf_simulation.py  ch20_rule_based_dispatch.py  ch22_results_analysis.py  ch23_irrigation_system.py  ch24_water_supply_network.py  ch25_urban_drainage.py  ch26_cascade_hydropower.py  ch27_flood_control.py  ch27_hydrology_parameters.json  ch27_hydrology_timeseries.json  ch27_hydrology_topology.json  ch30_custom_model.py  ch31_custom_agent.py  project_utils.py
water_system_sdk/docs/source/: api_reference.rst  conf.py  index.rst
water_system_sdk/examples/: case_01_single_reservoir_pid.py
water_system_sdk/src/chs_sdk/: README.md  __init__.py  config_models.py  main.py  simulation_manager.py
water_system_sdk/src/chs_sdk/agents/: __init__.py  agent_kernel.py  agent_status.py  base.py  base_agent.py  body_agent.py  body_agents.py  control_agent.py  control_agents.py  disturbance_agents.py  fsm.py  management_agents.py  message.py  message_bus.py  perception_agents.py
water_system_sdk/src/chs_sdk/core/: host.py  launcher.py
water_system_sdk/src/chs_sdk/factory/: mother_machine.py
water_system_sdk/src/chs_sdk/modules/: __init__.py
water_system_sdk/src/chs_sdk/preprocessing/: data_processor.py  interpolators.py  (+1 more)
water_system_sdk/src/water_system_simulator/: config_parser.py  main.py  simulation_manager.py
water_system_sdk/tests/: regression_test.py
water_system_sdk/tests/test_hydrology/: test_core_components.py
(+763 files in other folders)
