[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "water-system-simulator-sdk"
version = "0.1.0"
authors = [
  { name="Jules", email="jules@example.com" },
]
description = "A configurable SDK for simulating water systems."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "pyyaml",
    "matplotlib",
]

[project.urls]
"Homepage" = "https://github.com/example/water-system-simulator"

[tool.setuptools.packages.find]
where = ["src"]
