[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chs-water-system-simulator"
version = "0.1.0"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "A simulator for complex hydrosystems."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "pykrige",
    "pyyaml",
    "meshio"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "sphinx",
    "sphinx_rtd_theme"
]

[tool.setuptools.packages.find]
where = ["src"]
